src/client/components/table/style.scss
@import "../../styles/variables";

.table {
  width: 100%;
  height: 100%;
  display: block;
  background: $dark;
  overflow: hidden;
  ul {
    padding: 0;
    margin: 0;
  }
  ul.table-body {
    height: 470px;
    overflow-y: scroll;
    .col {
      border-bottom: 1px solid $dark;
      border-top: 0px;
      padding: 12px;
      font-size: 13px;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      display: inline-block;
      position: relative;
      .details {
        position: absolute;
        right: 0;
        top: 50%;
        transform: translateY(-50%);
        background: url("../../assets/images/more.svg");
        background-position: center;
        background-repeat: no-repeat;
        height: 30px;
        width: 30px;
        background-size: 18px;
        cursor: pointer;
        opacity: 0.6;
        &:hover {
          opacity: 1;
        }
      }
      &:last-child {
        border-left: 1px dashed $dark;
      }
    }
    &.two-col {
      .col {
        width: 25%;
        &:first-child {
          width: 75%;
        }
      }
    }
  }
}

.header {
  background: $darkest;
  width: 100%;
  border-bottom: 1px solid $dark;
  min-height: 75px;
  li {
    display: inline-block;
    font-size: 11px;
    color: #ffffff;
    letter-spacing: 0.7px;
    font-weight: bold;
    padding: 15px 20px;
    position: relative;
    height: 75px;
    cursor: pointer;
    &.selected {
      &:before {
        content: "";
        position: absolute;
        bottom: 0;
        left: 0;
        border-bottom: 3px solid #f7857d;
        display: block;
        width: 100%;
        height: 3px;
      }
    }
    &:hover {
      &:before {
        content: "";
        position: absolute;
        bottom: 0;
        left: 0;
        border-bottom: 3px solid #f7857d;
        display: block;
        width: 100%;
        height: 3px;
      }
    }
    .type {
      text-transform: uppercase;
    }
    .count {
      opacity: 0.8;
    }
  }
  li.cjs {
    .percentage {
      color: #f55753;
    }
  }
  li.esm {
    .percentage {
      color: $blue;
    }
  }

  li.mixed {
    .percentage {
      color: #dd71f9;
    }
  }
}

